--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -37,17 +37,17 @@
 
       <div class="form-group">
         <label for="name">Jméno:</label>
-        <input type="text" class="form-control" id="name" value="{{model.first_name}}">
+        {{input value=model.first_name class="form-control"}}
       </div>
 
       <div class="form-group">
         <label for="surname">Přijmení:</label>
-        <input type="text" class="form-control" id="surname" value="{{model.last_name}}">
+        {{input value=model.last_name class="form-control"}}
       </div>
 
       <div class="form-group">
         <label for="email">E-mail:</label>
-        <input type="text" class="form-control" id="email" value="{{model.email}}">
+        {{input value=model.email class="form-control"}}
       </div>
 
       <div style="margin-top:30px">
@@ -57,25 +57,22 @@
 
       <div class="form-group">
         <label for="street">Ulice:</label>
-        <input type="text" class="form-control" id="street" value="{{model.addr_street}}">
+        {{input value=model.addr_street class="form-control"}}
       </div>
 
       <div class="form-group">
         <label for="city">Město:</label>
-        <input type="text" class="form-control" id="city" value="{{model.addr_city}}">
+        {{input value=model.addr_city class="form-control"}}
       </div>
 
       <div class="form-group">
         <label for="psc">PSČ:</label>
-        <input type="text" class="form-control" id="psc" value="{{model.addr_zip}}">
+        {{input value=model.addr_zip class="form-control"}}
       </div>
 
       <div class="form-group">
         <label for="country">Země:</label>
-        <select class="form-control" id="country" value="{{model.addr_country}}">
-          <option>Česká republika</option>
-          <option>Slovensko</option>
-        </select>
+        {{view "select" content=countries class="form-control" value=model.addr_country}}
       </div>
 
       <hr>
@@ -87,31 +84,28 @@
 
             <div class="form-group">
                 <label for="street">Název:</label>
-                <input type="text" class="form-control" id="name-school" value="{{model.school_name}}">
+                {{input value=model.school_name class="form-control"}}
             </div>
 
             <div class="form-group">
                 <label for="street">Ulice:</label>
-                <input type="text" class="form-control" id="street-school" value="{{model.school_street}}">
+                {{input value=model.school_street class="form-control"}}
             </div>
 
             <div class="form-group">
                 <label for="city">Město:</label>
-                <input type="text" class="form-control" id="city-school" value="{{model.school_city}}">
+                {{input value=model.school_city class="form-control"}}
             </div>
 
             <div class="form-group">
                 <label for="psc">PSČ:</label>
-                <input type="text" class="form-control" id="psc-school" value="{{model.school_zip}}">
+                {{input value=model.school_zip class="form-control"}}
             </div>
 
             <div class="form-group">
-        <label for="country">Krajina:</label>
-        <select class="form-control" id="country" value="{{model.school_country}}">
-          <option>Česká republika</option>
-          <option>Slovensko</option>
-        </select>
-      </div>
+                <label for="country">Země:</label>
+                {{view "select" content=countries class="form-control" value=model.school_country}}
+            </div>
             <!--
       <div class="form-group">
         <label for="school">Škola:</label> (formát: název, ulice, město, PSČ, stát - ČR nebo SR)  <!- -TODO dropdown menu ? - ->
@@ -120,12 +114,9 @@
             -->
 
             <div class="form-group">
-        <label for="year-maturita">Rok maturity:</label>
-                <select class="form-control" id="year-maturita" value="{{model.school_finish}}">
-          <option>2016</option>
-          <option>2017</option>
-        </select>
-      </div>
+                <label for="year-maturita">Rok maturity:</label>
+                {{view "select" content=maturita_year class="form-control" value=model.school_finish}}
+            </div>
 
             <div style="margin-top:30px">
                 <h4>Profil</h4>
@@ -133,19 +124,13 @@
             </div>
 
       <div class="form-group">
-        <label for="description">Krátky popis seba:</label>
-        <textarea class="form-control" rows="5" id="description" value="{{model.description}}"></textarea>
+        <label for="description">Krátky popis sebe:</label>
+        {{textarea class="form-control" rows="5" value=model.description}}
       </div>
 
       <div class="form-group">
         <label for="tshirt">Velikost trička:</label>
-        <select class="form-control" id="tshirt" value="{{model.tshirt_size}}">
-          <option>S</option>
-          <option>M</option>
-          <option>L</option>
-          <option>XL</option>
-          <option>XXL</option>
-        </select>
+        {{view "select" content=tshirt_size class="form-control" value=model.tshirt_size}}
       </div>
         </div>
 
