--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -9,7 +9,7 @@
 {{#if model.my_score}}
 <div>
   Tvé skóre: {{model.my_score.score}}
-  <div class="panel panel-ksi">
+  <div class="panel panel-ksi" style="margin-top: 10px">
     <div class="panel-heading panel-heading-ksi">Komentář ke tvému řešení:</div>
     <div class="panel-body">
       {{model.my_score.comment}}
