--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -16,19 +16,19 @@
         <div class="navbar-collapse collapse" id="navbar-collapse-main">
             <ul class="nav navbar-nav navbar-left" style="margin-left:20px">
               <li>
-                  {{#link-to "tasks"}}Úlohy{{/link-to}}
+                  {{#link-to "tasks"}}{{t "menu.tasks"}}{{/link-to}}
               </li>
               <li>
-                  {{#link-to "results"}}Výsledky{{/link-to}}
+                  {{#link-to "results"}}{{t "menu.results"}}{{/link-to}}
               </li>
               <li>
-                  {{#link-to "articles"}}Novinky{{/link-to}}
+                  {{#link-to "articles"}}{{t "menu.news"}}{{/link-to}}
               </li>
               <li>
-                  {{#link-to "forum"}}Diskuse{{/link-to}}
+                  {{#link-to "forum"}}{{t "menu.forum"}}{{/link-to}}
               </li>
               <li>
-                  {{#link-to "faq"}}FAQ{{/link-to}}
+                  {{#link-to "faq"}}{{t "menu.faq"}}{{/link-to}}
               </li>
               <li>&nbsp;</li>
             </ul>
