sirka git status

--- a/app/styles/components/jumbotron-about.scss
+++ b/app/styles/components/jumbotron-about.scss
@@ -1,6 +1,8 @@
 .jumbotron-about {
     background-color: ksi-color('primary-orange');
-    margin: 50px 0;
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 #background-image { position: fixed; top: 0; left: 0; }
