--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -88,7 +88,7 @@
 	  <form>
       {{input value=identification placeholder="přihlašovací jméno"}}
   		{{input type="password" value=password placeholder="heslo"}}
-  		<input type="submit" name="login"  class="btn btn-primary" value="Přihlaš se" {{action 'login'}}>
+  		<input type="submit" name="login"  class="btn btn-primary" value="Přihlas se" {{action 'login'}}>
 	  </form>
 
 	  <div class="login-help">
