--- a/app/templates/components/thread-post.hbs
+++ b/app/templates/components/thread-post.hbs
@@ -9,8 +9,8 @@
         <button class="btn-xs btn-primary" style="border:none; margin-top: 10px" {{action "react"}}>
           {{#if is_reacting}} Zrušit reakci {{else}} Reagovat {{/if}}</button>
         {{#if admin}}
-          <button class="btn-xs btn-primary" style="border:none; margin-top: 10px">Smazat</button>
-          <button class="btn-xs btn-primary" style="border:none; margin-top: 10px">Přesunout</button> <!-- TODO ako? -->
+          <button class="btn-xs btn-primary" style="border:none; margin-top: 10px" {{action "delete"}}>Smazat</button>
+          <button class="btn-xs btn-primary" style="border:none; margin-top: 10px" {{action "move"}}>Přesunout</button> <!-- TODO ako? -->
         {{/if}}
       </div>
       <!-- button odkryje textareau: -->
@@ -18,12 +18,15 @@
         {{#unless session.isAuthenticated}}
           {{warning-login text="Pro přispívání do diskuse musíš být přihlášen."}}
         {{else}}
+          {{#if content_error}}
+            {{warning-general text=content_error}}
+          {{/if}}
           <div class="panel panel-default" style="border:none; box-shadow: none;">
               <div class="controls form-inline" style="margin-top:20px">
                   <label for="threadName">Příspěvek:</label>
-                  {{text-editor value=taskNewArticleEditor}}
+                  {{text-editor value=response_text}}
               </div>
-      				<button class="btn btn-sm btn-primary" style="margin-top:20px">Odeslat</button>
+      				<button class="btn btn-sm btn-primary" style="margin-top:20px" {{action "send"}}>Odeslat</button>
       		</div>
         {{/unless}}
       {{/if}}
