about ksi - upravene formatovanie a dorobene texty

--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -34,6 +34,13 @@ h6 {
   color: ksi-color-level('text-dark', 4);
 }
 
+.about-paragraph {
+  color:white;
+  width:90%;
+  margin: 0 auto;
+  font-size:10px;
+}
+
 #profile-text {
   margin-right: 15px;
   margin-left: 7px;
