--- a/app/styles/components/jumbotron-about.scss
+++ b/app/styles/components/jumbotron-about.scss
@@ -1,8 +1,9 @@
 .jumbotron-about {
     background-color: ksi-color('primary-orange');
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
+    padding: 0px;
 }
 
 #background-image { position: fixed; top: 0; left: 0; }
