--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -58,12 +58,12 @@
             {{else}}
               <li>
                 <p class="navbar-btn" data-toggle="modal" data-target="#login-modal" style="margin-left:20px">
-                      <a href="javascript:void(0)" class="btn btn-header">Přihlásit se</a>
+                      <a href="javascript:void(0)" class="btn btn-header" style="width:130px">Přihlásit se</a>
                 </p>
               </li>
               <li>
                 <p class="navbar-btn navbar-btn-main" style="margin-left:20px">
-                      {{#link-to "registration" class="btn btn-header"}}Registrovat se{{/link-to}}
+                      {{#link-to "registration" class="btn btn-header" style="width:130px"}}Registrovat se{{/link-to}}
                 </p>
               </li>
             {{/if}}
