Fix organizator list overlay (styling is needed!)

--- a/app/styles/components/orgs-list.scss
+++ b/app/styles/components/orgs-list.scss
@@ -1,4 +1,6 @@
 .orgPopup {
     margin: auto;
-    font-isize: 50px;
+    /*font-size: 50px;*/
+    /*background-color: black;
+    background-opacity: 0.5;*/
 }
