--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -41,7 +41,7 @@
               <img src="img/info-kscuk.svg" style="max-width:100%;"/>
             </a>
             <p class="about-paragraph" style="font-size:17px;" align="justify">
-              Úspěšní řešitelé semináře jsou pozvání na týdenní soustředění K-SCUK, které je společné pro KSI a ekologický seminář KEKS. Náplní soustředění je jak odborný program, kdy se opět naučíte něco nového z informatiky, tak doprovodný zážitkový program. Odborný program se skládá ze zajímavých přednášek, které jdou nad rámec běžné výuky na školách. Cílem není nahrazovat klasickou výuku, ale spíše inspirovat, ukázat netradiční směry. Doprovodný program spočívá v tematicky laděných hrách a programech (mezi organizátory jsou například členové Instruktorů Brno nebo  někteří orgové her Intersob a Interlos). Důležitá role soustředění je setkání. Setkání s dalšími lidmi, kteří mají podobné zájmy. A také setkání s organizátory, kteří vám mohou poskytnout zajímavé pohledy do zákulisí vysoké školy.
+              Úspěšní řešitelé semináře jsou pozvání na týdenní soustředění K-SCUK, které je společné pro KSI a ekologický seminář KEKS. Náplní soustředění je jak odborný program, kdy se opět naučíte něco nového z informatiky, tak doprovodný zážitkový program. Odborný program se skládá ze zajímavých přednášek, které jdou nad rámec běžné výuky na školách.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
@@ -50,9 +50,10 @@
             {{/link-to}}
             <p class="about-paragraph" style="font-size:17px;" align="justify">
               KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské a matematické myšlení.
-            <br>
-              Každý ročník semináře se skládá z několika tematických sad (vln). Sada vždy začíná úvodními příklady, které vás, řešitele, uvedou do tématu, vysvětlí základní myšlenky, pojmy a triky. Následní těžší úlohy různého charakteru, na jejichž vyřešení a sepsání řešení máte zhruba jeden měsíc. Zatímco nejjednodušší úlohy by po přečtení úvodního povídání neměly dělat problémy ani úplným začátečníkům, nad tou nejtěžší se může zapotit i ostřílený řešitel programátorských soutěží.
             </p>
+          </div>
+          <div class="col-sm-12">
+            {{#link-to "about" id="more-about"}}Zjistit více!{{/link-to}}
           </div>
         </div>
       </div>
