--- a/app/styles/components/jumbotron-about.scss
+++ b/app/styles/components/jumbotron-about.scss
@@ -9,3 +9,11 @@
 #background-image { position: fixed; top: 0; left: 0; }
 .bgwidth { width: 100%; }
 .bgheight { height: 90%; }
+
+#more-about {
+	text-align: center;
+	font-color: white;
+	font-size: 30px;
+	padding: 10px;
+	margin: 40px;
+}
