--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -3,23 +3,33 @@
     <div class="footer-above">
         <div class="container">
             <div class="row">
-                <div class="footer-col col-md-5">
-                    <h3>Kontakt</h3>
-                    <a href="mailto:ksi@fi.muni.cz" class="footer-contact">ksi@fi.muni.cz</a>
-                    <a href="https://www.facebook.com/ksi.fi.muni">facebook</a>
-                </div>
-                <div class="footer-col col-md-7">
+                <div class="footer-col col-md-12">
                     <h3>Odkazy</h3>
-                    <div class="footer-logos">
-                      <a href="http://mam.mff.cuni.cz" title="Studentský matematicko-fyzikální seminář a časopis" class="footer-logo wide mam-logo"></a>
-                      <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo muni-logo"></a>
-                      <a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo fi-logo"></a>
-                      <a href="http://www.sci.muni.cz/" title="Přírodovědecká fakulta MU" class="footer-logo prf-logo"></a>
-                      <a href="http://vibuch.math.muni.cz" title="Vzdělávací ikurz pro budoucí chemiky" class="footer-logo vibuch-logo"></a>
-                      <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo brkos-logo"></a>
-                      <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo keks-logo"></a>
-                      <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo interlos-logo"></a>
-                    </div>
+                    <table align="center">
+                      <tr>
+                        <td><a href="mailto:ksi@fi.muni.cz" title="ksi@fi.muni.cz" class="footer-logo" id="mail-logo"></a></td>
+                        <td><a href="https://www.facebook.com/ksi.fi.muni" title="Facebook"class="footer-logo" id="facebook-logo"></a></td>
+                        <td><a href="https://www.youtube.com/channel/UC_Sq9u4KZe6oGzPN3zsMa8A" title="YouTube" class="footer-logo" id="youtube-logo"></a></td>
+
+                        <td><a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo" id="mu-logo"></a></td>
+                        <td><a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo" id="fi-logo"></a></td>
+
+                        <td><a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo" id="brkos-logo"></a></td>
+                        <td><a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo" id="keks-logo"></a></td>
+                        <td><a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo" id="los-logo"></a></td>
+                        <td><a href="http://intersob.math.muni.cz/" title=" INTERdisiplinárně Soběstačný OBčan" class="footer-logo" id="sob-logo"></a></td>
+                      </tr>
+                    </table>
+                    <!--<a href="mailto:ksi@fi.muni.cz" class="footer-contact">ksi@fi.muni.cz</a>
+                    <a href="https://www.facebook.com/ksi.fi.muni">facebook</a>
+                    <a href="http://mam.mff.cuni.cz" title="Studentský matematicko-fyzikální seminář a časopis" class="footer-logo wide mam-logo"></a>
+                    <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo muni-logo"></a>
+                    <a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo fi-logo"></a>
+                    <a href="http://www.sci.muni.cz/" title="Přírodovědecká fakulta MU" class="footer-logo prf-logo"></a>
+                    <a href="http://vibuch.math.muni.cz" title="Vzdělávací ikurz pro budoucí chemiky" class="footer-logo vibuch-logo"></a>
+                    <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo brkos-logo"></a>
+                    <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo keks-logo"></a>
+                    <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo interlos-logo"></a>-->
                 </div>
             </div>
         </div>
