uprava o ksi - css

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -30,30 +30,30 @@
           text-align: center;">
           <div class="col-xs-12 col-sm-4">
             {{#link-to "achievements"}}
-              <img src="img/info-achievement.svg" style="max-width:100%;"/>
+              <img src="img/info-achievement.svg" style="max-width:90%;"/>
             {{/link-to}}
-            <p class="about-paragraph" style="font-size:17px;" align="justify">
+            <p class="about-paragraph" style="font-size:18px;" align="justify">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac auctor leo. Donec imperdiet euismod dui vel ornare. Nullam nec eros laoreet, hendrerit magna non, auctor nisi. Ut vestibulum dui vel elit tempus, ac volutpat dolor accumsan. Morbi commodo blandit nibh vitae suscipit. Cras nec sapien pellentesque, mollis quam nec, vulputate purus.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
             <a href="http://ksi.fi.muni.cz/kscuk/">
-              <img src="img/info-kscuk.svg" style="max-width:100%;"/>
+              <img src="img/info-kscuk.svg" style="max-width:90%;"/>
             </a>
-            <p class="about-paragraph" style="font-size:17px;" align="justify">
+            <p class="about-paragraph" style="font-size:18px;" align="justify">
               Úspěšní řešitelé semináře jsou pozvání na týdenní soustředění K-SCUK, které je společné pro KSI a ekologický seminář KEKS. Náplní soustředění je jak odborný program, kdy se opět naučíte něco nového z informatiky, tak doprovodný zážitkový program. Odborný program se skládá ze zajímavých přednášek, které jdou nad rámec běžné výuky na školách.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
             {{#link-to "tasks"}}
-              <img src="img/info-ksi.svg" style="max-width:100%;"/>
+              <img src="img/info-ksi.svg" style="max-width:90%;"/>
             {{/link-to}}
-            <p class="about-paragraph" style="font-size:17px;" align="justify">
-              KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské a matematické myšlení.
+            <p class="about-paragraph" style="font-size:18px;" align="justify">
+              KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské a matematické myšlení.
             </p>
           </div>
           <div class="col-sm-12">
-            {{#link-to "about" id="more-about"}}Zjistit více!{{/link-to}}
+            {{#link-to "about" id="more-about" class="white-link"}}<h2>Zjistit více!</h2>{{/link-to}}
           </div>
         </div>
       </div>
