--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -2,7 +2,7 @@
 	<h2 id="about">O KSI</h2>
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus augue eu ante sodales lacinia id a dui. Nullam volutpat dapibus lacus, a consequat arcu ornare non. Nulla iaculis interdum felis sed suscipit. Nunc rutrum ex turpis, vel mattis turpis tempor eu. Mauris auctor tempus nulla, ac vehicula nisl. Cras ex elit, tempor quis lacinia id, vehicula in magna. Morbi congue lacinia faucibus. Nunc suscipit tristique metus quis convallis. Fusce a risus ut dui ullamcorper aliquet. Nullam sagittis magna ut justo rhoncus, id feugiat nulla luctus. Vivamus at tincidunt diam. Nunc imperdiet, nulla egestas sollicitudin sodales, quam nunc mattis leo, sit amet volutpat est ante a eros. Aenean euismod tortor dui, non ultrices odio bibendum sed. Vivamus ultrices ex in dolor tempor, a mattis magna euismod. </p>
   <h2 id="faq">FAQ</h2>
-  <p id="date-text">Publikováno 4.8.2015</p>
+  <!--<p id="date-text">Publikováno 4.8.2015</p>-->
 
 	<div class="panel panel-ksi">
 	  <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať riešenie v slovenčine?</div>
