--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -22,7 +22,7 @@
                   {{#link-to "results"}}{{t "menu.results"}}{{/link-to}}
               </li>
               <li>
-                  {{#link-to "about"}}{{t "menu.about"}}{{/link-to}}
+                  {{#link-to "about" (query-params view="about")}}{{t "menu.about"}}{{/link-to}}
               </li>
               <li>
                   {{#link-to "articles"}}{{t "menu.news"}}{{/link-to}}
@@ -31,9 +31,7 @@
                   {{#link-to "forum"}}{{t "menu.forum"}}{{/link-to}}
               </li>
               <li>
-                  <!--Nasty hack
-                  {{#link-to "faq"}}{{t "menu.faq"}}{{/link-to}}-->
-                  <a href="/o-ksi#faq">{{t "menu.faq"}}</a>
+                  {{#link-to "about" (query-params view="faq")}}{{t "menu.faq"}}{{/link-to}}
               </li>
               <li>&nbsp;</li>
             </ul>
