--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -5,10 +5,20 @@
             <div style="margin-top:30px">
                 <img src="{{model.profile_pic}}" style="max-width:250px;"/> <!-- user image --> <!-- TODO default img -->
             </div>
+      {{#if is_changing_picture}}
+        {{#if picture_error}}
+          {{warning-general text=picture_error}}
+        {{/if}}
+        {{picture-upload url="/profile/pic" actionReceiver=picture_field file_type_error="file_type_error"}}
+      {{/if}}
 
-      <button type="button" class="btn btn-primary" style="margin-top:20px; width:250px;"> <!-- TODO file button -->
+      <button type="button" class="btn btn-primary" style="margin-top:20px; width:250px;" {{action "upload_pic"}}> <!-- TODO file button -->
         <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span>
-        Nahraj fotografii
+        {{#if is_changing_picture}}
+          Nahraj fotografii
+        {{else}}
+          Změnit fotografii
+        {{/if}}
       </button>
 
       <ul id="custom-bootstrap-menu" class="nav nav-pills nav-stacked" style="margin-top:20px; width:250px;"> <!-- TODO colors/styles a linky -->
@@ -143,7 +153,7 @@
 
       <div class="form-group">
         <label for="description">Krátky popis sebe:</label>
-        {{textarea class="form-control" rows="5" value=model.description}}
+        {{textarea class="form-control" rows="5" value=model.short_info}}
       </div>
 
       <div class="form-group">
