--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -7,8 +7,15 @@
 </div>
 <hr>
 {{#if model.my_score}}
-<div>
-  Tvé skóre: {{model.my_score.score}}
+<div style="margin:20px">
+  <h5>Skóre:</h5>
+
+	<div class="progress" style="margin-top:20px">
+		<div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="10" style="width: {{model.my_score.score}}%"><!-- TODO: max value = pocet max bodov z ulohy-->
+			{{model.my_score.score}}&nbsp;/pocet bodov za ulohu <!-- TODO honza -->
+		</div>
+	</div>
+
   <div class="panel panel-ksi" style="margin-top: 10px">
     <div class="panel-heading panel-heading-ksi">Komentář ke tvému řešení:</div>
     <div class="panel-body">
