--- a/app/templates/forum.hbs
+++ b/app/templates/forum.hbs
@@ -1,4 +1,4 @@
-<section id="faq" class="container content-section" style="text-align:justify">
+<section class="container content-section" style="text-align:justify">
 	<!-- Sekcia -->
 	<div style="margin:40px;">
 		<h2>Obecná diskuse</h2>
